--- a/calculator.css
+++ b/calculator.css
@@ -29,8 +29,15 @@ h1{
     letter-spacing: 3px;
     border: 2px solid black;
     margin-top: 10px;
-    
+    }
 
+.green{
+	background-color: rgb(49, 9, 122);
+	height:60px;
+    width: 60px;
+    font-weight: bold;
+	color: white;
+    outline: none;
 }
 .btn{
     height:60px;
@@ -57,5 +64,5 @@ h1{
     background-color:  rgb(49, 9, 122);
 }
 .equel{
-    background-color: #ff2429;
+    background-color: rgb(20, 20, 20);
 }
